--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       BOT_TOKEN: ""
       BOT_OWNER: ""
+      UPDATE_NOTIFY: "false"
     volumes:
       - ./conf:/conf
       - ./jars:/jars
